tests/files/parser_tests/should_fail/084.cmdr
//Should not parse string interpolation due to statement instead of expression
x = "${while (true) { x = 5; } }";
